<resources>
    <string name="app_name">CriptoManagerApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cripto">cripto</string>
    <string name="title_convertor">convertor</string>

    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления:%s</string>

    <string name="slash">/</string>
    <string name="price_label">Цена: %s$</string>
    <string name="min_price_label"> Минимум за день:%s$</string>
    <string name="max_price_label"> Максимум за день:%s$</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="algorithm_label">Алгоритм:%s</string>

    <string name="last_updated_label">Обновлено:</string>
    <string name="value_string">Value: %s</string>
    <string name="previous_string">Previous: %s</string>
    <string name="numcode_sring">NumCode: %s</string>
    <string name="nominal_string">Nominal: %s</string>
    <string name="name_string">Name: %s</string>
    <string name="charcode_string">CharCode: %s</string>
    <string name="login_hint">Login</string>
    <string name="pass_hint">password</string>
    <string name="email_hint">email</string>
    <string name="login_btn">Login</string>
    <string name="reg_btn">Registration</string>
    <string name="aunt_error">aunt error</string>
    <string name="logout_btn">Logout</string>
    <string name="tv_welcome">Welcome,</string>
    <string name="functionality_in_development">Functionality in development</string>
    <string name="profile">profile</string>
    <string name="favorites">Favorites</string>

</resources>